ics-operations-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ics-operations-app
  name: ics-operations-app
spec:
  type: ClusterIP
  selector:
    app: ics-operations-app
  ports:
  - name: app-port
    protocol: TCP
    port: 8080
    targetPort: 8080
status:
  loadBalancer: {}
